Added stats api
